Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@kms_pipe_crc_basic@suspend-read-crc-pipe-a - dmesg-warn - *ERROR* Lost access to MMIO BAR; all registers now read back as 0xFFFFFFFF!
<3> [1023.407315] i915 0000:00:02.0: [drm] *ERROR* Lost access to MMIO BAR; all registers now read back as 0xFFFFFFFF!
<7> [1023.959342] [drm:fw_domain_wait_ack_with_fallback [i915]] render had to use fallback to clear ack, 0xffffffff (passes 11)
<3> [1024.009455] [drm:fw_domains_get_with_fallback [i915]] *ERROR* render: timed out waiting for forcewake ack to clear.
<5> [1024.009507] i915 0000:00:02.0: [drm:add_taint_for_CI [i915]] CI tainted:0x9 by fw_domains_get_with_fallback+0x282/0x330 [i915]
<3> [1024.009715] i915 0000:00:02.0: [drm] *ERROR* Lost access to MMIO BAR; all registers now read back as 0xFFFFFFFF!
<4> [1024.009716] ------------[ cut here ]------------
<4> [1024.009717] i915 0000:00:02.0: Unclaimed read from register 0x2358
<4> [1024.009735] WARNING: CPU: 0 PID: 6 at drivers/gpu/drm/i915/intel_uncore.c:1493 __unclaimed_reg_debug+0x69/0x80 [i915]
<4> [1024.009786] Modules linked in: snd_hda_codec_hdmi i915 mei_hdcp x86_pkg_temp_thermal snd_hda_intel snd_intel_dspcfg snd_hda_codec coretemp snd_hwdep crct10dif_pclmul snd_hda_core crc32_pclmul e1000e ghash_clmulni_intel snd_pcm ptp mei_me pps_core ttm mei prime_numbers intel_lpss_pci smsc75xx usbnet mii
<4> [1024.009820] CPU: 0 PID: 6 Comm: kworker/0:0H Tainted: G W 5.15.0-rc7-CI-CI_DRM_10817+ #1
<4> [1024.009822] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P LP4x RVP, BIOS ADLPFWI1.R00.2327.A00.2108120709 08/12/2021
<4> [1024.009824] Workqueue: events_highpri guc_timestamp_ping [i915]
<4> [1024.009907] RIP: 0010:__unclaimed_reg_debug+0x69/0x80 [i915]
<4> [1024.009960] Code: 48 8b 78 08 4c 8b 67 50 4d 85 e4 74 2c e8 df 1a 46 e1 45 89 e8 48 89 e9 4c 89 e2 48 89 c6 48 c7 c7 50 da 4d a0 e8 57 08 7d e1 <0f> 0b 48 8b 43 08 83 a8 70 0d 00 00 01 eb a7 4c 8b 27 eb cf 0f 1f
<4> [1024.009962] RSP: 0018:ffffc900000b3d60 EFLAGS: 00010086
<4> [1024.009965] RAX: 0000000000000000 RBX: ffff8881145e0ee0 RCX: 0000000000000004
<4> [1024.009966] RDX: 0000000080000004 RSI: ffffffff822e33e4 RDI: 00000000ffffffff
<4> [1024.009968] RBP: ffffffffa052c112 R08: ffff888100e85d80 R09: 00000000fffffffe
<4> [1024.009969] R10: 000000003e64a733 R11: 000000003356e6fc R12: ffff888103b52ca0
<4> [1024.009971] R13: 0000000000002358 R14: 00000000ffffffff R15: 0000000000000002
<4> [1024.009972] FS: 0000000000000000(0000) GS:ffff88849f000000(0000) knlGS:0000000000000000
<4> [1024.009974] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [1024.009976] CR2: 00007f717ba79000 CR3: 0000000102134002 CR4: 0000000000770ef0
<4> [1024.009977] PKRU: 55555554
<4> [1024.009979] Call Trace:
<4> [1024.009982] fwtable_read32+0x250/0x300 [i915]
<4> [1024.010036] guc_update_pm_timestamp.isra.72+0x40/0xa0 [i915]
<4> [1024.010118] __update_guc_busyness_stats+0x46/0x80 [i915]
<4> [1024.010196] guc_timestamp_ping+0xbe/0xe0 [i915]
<4> [1024.010276] process_one_work+0x275/0x5d0
<4> [1024.010287] worker_thread+0x37/0x390
<4> [1024.010290] ? process_one_work+0x5d0/0x5d0
<4> [1024.010293] kthread+0x13b/0x170
<4> [1024.010295] ? set_kthread_struct+0x40/0x40
<4> [1024.010299] ret_from_fork+0x1f/0x30
<4> [1024.010311] irq event stamp: 6514750
<4> [1024.010312] hardirqs last enabled at (6514749): [<ffffffff81af65bf>] _raw_spin_unlock_irq+0x1f/0x40
<4> [1024.010317] hardirqs last disabled at (6514750): [<ffffffff81af63f7>] _raw_spin_lock_irqsave+0x47/0x50
<4> [1024.010320] softirqs last enabled at (6510176): [<ffffffff81e0032d>] __do_softirq+0x32d/0x493
<4> [1024.010322] softirqs last disabled at (6510171): [<ffffffff810b7f16>] irq_exit_rcu+0xa6/0xe0
<4> [1024.010325] ---[ end trace 98eae1757a347bcf ]---
@sdutt / @jani.saarinen I believe this is related to reading_all_fs (label used). should we waterfall this to sysdebug team? Meanwhile, what's the right component for this issue?